<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.android.smartfridgeapp.MainActivity">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/fridge" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailField"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_password"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:background="@drawable/buttons"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_login"
        android:onClick="loginButton"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:layout_height="wrap_content"
            android:text="@string/btn_createAccount"
            android:id="@+id/registrationButton"
            android:layout_marginRight="5dp"
            android:onClick="registrationButton"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:layout_height="wrap_content"
            android:text="@string/btn_resetPassword"
            android:id="@+id/resetPasswordButton"
            android:layout_marginLeft="5dp"
            android:onClick="resetPasswordButton"
            android:textColor="#ffffff" />

    </LinearLayout>
</LinearLayout>
