<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="com.example.android.smartfridgeapp.AddTheProduct">

    <TextView
        android:id ="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="20dp"
        android:text="@string/add_product_header"
        android:textColor="#000000"
        android:textSize="30dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.66"
            android:layout_height="wrap_content"
            android:id="@+id/productBarCode"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_barcode"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/scannerButton"
            android:background="@drawable/buttons"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="scanBarCode"
            android:text="@string/btn_scan"
            android:textSize="18dp"
            android:textColor="#ffffff" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:id="@+id/productName"
        android:hint="@string/hint_productname"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/voiceIcon1"
            android:src="@drawable/voice"
            android:clickable="true"
            android:onClick="productVoice" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.83"
            android:layout_height="wrap_content"
            android:id="@+id/expiryDate"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_expiry_date"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/voiceIcon2"
            android:src="@drawable/voice"
            android:clickable="true"
            android:onClick="calendarVoice" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/calendar"
            android:src="@drawable/calendar"
            android:onClick="calendarButton"
            android:clickable="true" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="Send Notification"
        android:id="@+id/checkBox"
        android:checked="false"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveProduct"
        android:background="@drawable/buttons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/btn_save_product"
        android:onClick="saveProduct"
        android:textColor="#ffffff" />

</LinearLayout>






